--- a/EgorEmployees.RestApi/EgorEmployees.RestApi.csproj
+++ b/EgorEmployees.RestApi/EgorEmployees.RestApi.csproj
@@ -7,4 +7,8 @@
         <LangVersion>11</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FastEndpoints" Version="5.7.2" />
+    </ItemGroup>
+
 </Project>
