Add database connection, repositories, initializer

--- a/EgorEmployees.RestApi/appsettings.json
+++ b/EgorEmployees.RestApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Database": {
+    "ConnectionString": "Server=localhost;Database=egor_employees;User=root;Password=admin;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
