--- a/EgorEmployees.RestApi/Properties/launchSettings.json
+++ b/EgorEmployees.RestApi/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "https://localhost:7181/swagger",
       "applicationUrl": "https://localhost:7181;http://localhost:5188",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
