--- a/EgorEmployees.RestApi/EgorEmployees.RestApi.csproj
+++ b/EgorEmployees.RestApi/EgorEmployees.RestApi.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="FastEndpoints" Version="5.7.2" />
+      <PackageReference Include="FastEndpoints.Swagger" Version="5.7.2" />
       <PackageReference Include="MySql.Data" Version="8.0.32" />
     </ItemGroup>
 
